k8s/nginx/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
spec:
  rules:
  - host: nginx.apps.blierop.com
    http:
      paths:
      - backend:
          service:
            name: nginx
            port:
              number: 80
        path: /
        pathType: Exact
  tls:
  - hosts:
    - nginx.apps.blierop.com
    secretName: nginx-cert
